# AOC2025

./: README.md  dune-project
lib/: advent.ml
