(lang dune 3.20)

(name AOC2025)

(generate_opam_files true)

(source
 (github nukeLEARg/AOC2025))

(authors "Nuke <nukelearyt@gmail.com>")

(license MIT)

(package
 (name AOC2025)
 (synopsis "Advent of Code 2025 solutions in OCaml")
 (description
  "Advent of Code 2025 solutions implemented in OCaml using Dune build system. For later conversion to Hardcaml as part of Jane Street Advent of FPGA")
 (depends ocaml))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
